News UAT/force-app/main/default/objects/SurveyQuestionResponse__c/SurveyQuestionResponse__c.object-meta.xml
<CustomObject>
    <label>Survey Question Response</label>
    <nameField>
        <displayFormat>Response-{0000000}</displayFormat>
        <label>Response ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Question Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>