News UAT/force-app/main/default/objects/SurveyQuestionResponse__c/fields/Compliance_Question__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Question__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Compliance Question</label>
    <type>Checkbox</type>
</CustomField>