News UAT/force-app/main/default/objects/SurveyQuestionResponse__c/fields/FailedCompliance__c.field-meta.xml
<CustomField>
    <fullName>FailedCompliance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Failed Compliance</label>
    <type>Checkbox</type>
</CustomField>