News UAT/force-app/main/default/objects/SurveyQuestionResponse__c/fields/Has_Question_Changed__c.field-meta.xml
<CustomField>
    <fullName>Has_Question_Changed__c</fullName>
    <formula>IF
(
Original_Question__c != Survey_Question__r.Question__c,
TRUE,
FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Question Changed</label>
    <type>Checkbox</type>
</CustomField>