News UAT/force-app/main/default/objects/SurveyQuestionResponse__c/fields/Max_Weight__c.field-meta.xml
<CustomField>
    <fullName>Max_Weight__c</fullName>
    <label>Max Weight</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>