News UAT/force-app/main/default/objects/SurveyQuestionResponse__c/fields/NotApplicable__c.field-meta.xml
<CustomField>
    <fullName>NotApplicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Not Applicable</label>
    <type>Checkbox</type>
</CustomField>