News UAT/force-app/main/default/objects/SurveyQuestionResponse__c/fields/OldResponse__c.field-meta.xml
<CustomField>
    <fullName>OldResponse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Old Response</label>
    <type>Checkbox</type>
</CustomField>