News UAT/force-app/main/default/objects/SurveyQuestionResponse__c/fields/Original_Question__c.field-meta.xml
<CustomField>
    <fullName>Original_Question__c</fullName>
    <label>Original Question</label>
    <length>255</length>
    <type>Text</type>
</CustomField>