News UAT/force-app/main/default/objects/SurveyQuestionResponse__c/fields/SurveySection__c.field-meta.xml
<CustomField>
    <fullName>SurveySection__c</fullName>
    <description>Survey section option</description>
    <label>Survey Section</label>
    <length>255</length>
    <type>Text</type>
</CustomField>